# memscope

./: .gitignore  README.md  memscope_testing.ipynb  pyproject.toml
examples/: healthy_training.py  leaky_graph.py  leaky_periodic.py  leaky_tensor_list.py
memscope/: __init__.py  analyzer.py  context.py  hooks.py  reporter.py  sampler.py  snapshot.py
memscope/templates/: report.html.j2
tests/: test_analyzer.py  test_hooks.py  test_integration.py  test_sampler.py
