[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memscope"
version = "1.0.0"
description = "GPU/CPU memory leak profiler for PyTorch training loops"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["pytorch", "memory", "profiler", "gpu", "leak", "cuda"]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "jinja2>=3.1",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["memscope*"]

[tool.setuptools.package-data]
memscope = ["templates/*.j2"]
